less: 8.1 :: Finish. Time: 1:48

--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -1,6 +1,7 @@
-.active {
-    background-color: #ffa92e;
+.active{
+    color: red;
 }
-.my_item {
-    background-color: beige;
+
+.myItem{
+    background: #eee;
 }
